--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Math_Basic_of_Information_Security_Calculator)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Math_Basic_of_Information_Security_Calculator main.cpp BezoutsIdentity.cpp header.h ModOperations.cpp usage.cpp)
+add_executable(Math_Basic_of_Information_Security_Calculator main.cpp BezoutsIdentity.cpp header.h ModOperations.cpp usage.cpp QuadraticResidue.cpp)
