Add Primitive Roots and Indicators and Euler fx.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Math_Basic_of_Information_Security_Calculator)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Math_Basic_of_Information_Security_Calculator main.cpp header.h BezoutsIdentity.cpp ModOperations.cpp usage.cpp QuadraticResidue.cpp logic.cpp)
+add_executable(Math_Basic_of_Information_Security_Calculator main.cpp header.h BezoutsIdentity.cpp ModOperations.cpp usage.cpp QuadraticResidue.cpp logic.cpp PrimitiveRootsANDIndicators.cpp)
